--- a/config.example.yml
+++ b/config.example.yml
@@ -1,6 +1,7 @@
 server:
   host: 0.0.0.0
-  port: 4000
+  port: 3000
+
   timezone: "Asia/Makassar"
 database:
   host: 127.0.0.1
@@ -8,3 +9,6 @@ database:
   user: root
   pass: password
   name: attendance
+auth:
+  user: admingx
+  pass: admingx2024
