--- a/config.example.yml
+++ b/config.example.yml
@@ -1,13 +1,11 @@
 server:
   host: 0.0.0.0
   port: 3000
-
-  timezone: "Asia/Makassar"
 database:
   host: 127.0.0.1
   port: 5432
-  user: root
-  pass: password
+  user: postgres
+  pass: secret
   name: attendance
 auth:
   user: admingx
